<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!--Title-->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Age Input -->
    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextAge"
        android:inputType="number"
        android:layout_marginTop="8dp" />

    <!-- Gender Selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioMale" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioFemale" />
    </RadioGroup>

    <!-- Height Input -->
    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextHeight"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp" />

    <!-- Height Conversion Options (as Spinner) -->
    <Spinner
        android:id="@+id/spinnerHeightUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/height_units_array" />

    <!-- Weight Input -->
    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextWeight"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp" />

    <!-- Weight Conversion Options (as Spinner) -->
    <Spinner
        android:id="@+id/spinnerWeightUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/weight_units_array" />

    <!-- Button to Calculate BMI -->
    <Button
        android:id="@+id/btnResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnResult"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

</LinearLayout>
